// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Split Component > even 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<split even>

<img src=\\"https://picsum.photos/id/1005/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1010/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1025/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</split>
</div>"
`;

exports[`Split Component > gap 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<split even gap=\\"3\\">

**Lorem Ipsum** is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s

when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap

into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
</split>
</div>"
`;

exports[`Split Component > left & right 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<split left=\\"2\\" right=\\"1\\" gap=\\"2\\">

**Lorem Ipsum** is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
	
into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
</split>
</div>"
`;

exports[`Split Component > no-margin 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<split no-margin>

<img src=\\"https://picsum.photos/id/1001/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1002/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1003/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1004/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1005/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1006/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1009/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1008/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</split>
</div>"
`;

exports[`Split Component > wrap 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<split wrap=\\"4\\">

<img src=\\"https://picsum.photos/id/1010/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">

<img src=\\"https://picsum.photos/id/1011/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">

<img src=\\"https://picsum.photos/id/1012/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">

<img src=\\"https://picsum.photos/id/1013/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">

<img src=\\"https://picsum.photos/id/1014/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">

<img src=\\"https://picsum.photos/id/1015/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</split>
</div>"
`;
